DesignProject/tests/error/test06.src
// Error Test 6: Semantic error - function call with wrong number of arguments
func testAdd(a : integer, b : integer) -> integer {
    local result : integer;
    result := a + b;
    return(result);
}

func test() -> void {
    local sum : integer;
    sum := testAdd(5);  // Wrong number of arguments: expected 2, got 1
    write(sum);
}

